@@ -1,3 +1,8 @@
+2006-04-30  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* NSMenu.m: ([performKeyEquivalent:]) Ignore key eqivalents other
+	than carriage return if the command key is not pressed.
+
 2006-04-30  David Ayers  <d.ayers@inode.at>
 
 	* ColorPickers/GSNamedColorPicker.m ([-browser:selectRow:inColumn:]):
